# ground-station

./: .gitignore  CMakeLists.txt  DualPlot.qml  Message.qml  UIButton.qml  UISwitch.qml  VariablePlot.qml  VectorPlot.qml  antenna.cpp  antenna.h  main.cpp  main.qml  readme.md  resources.qrc
arduino/main/: main.ino
